# cpp-small-gui-project-sdl2

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/: CompilerWarnings.cmake  Dependencies.cmake  StandardProjectSettings.cmake  UniversalAppleBuild.cmake
packaging/: CMakeLists.txt
packaging/dmg/: AppDMGSetup.scpt
packaging/nsis/: README.md
src/: Application.cpp  Application.hpp  CMakeLists.txt  DPIHandler.hpp  Main.cpp  Resources.hpp  Window.cpp  Window.hpp
src/assets/icons/: icon.icns
src/assets/manifests/: App.desktop.in  Info.plist  app.rc
src/packaging/: Darwin.cmake  Linux.cmake  Windows.cmake
src/platform/darwin/: CMakeLists.txt  Resources.cpp
src/platform/linux/: CMakeLists.txt  DPIHandler.cpp  Resources.cpp
src/platform/macos/: DPIHandler.cpp
src/platform/windows/: CMakeLists.txt  DPIHandler.cpp  Resources.cpp
